--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "dexie": "^4.0.11",
+    "bcryptjs": "^2.4.3",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
